# vectizeit

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/vectize/: Cargo.toml
crates/vectize-cli/: Cargo.toml
crates/vectize-cli/src/: main.rs
crates/vectize-cli/tests/: cli_smoke_tests.rs
crates/vectize-wasm/: Cargo.toml
crates/vectize-wasm/src/: lib.rs
crates/vectize/src/: config.rs  error.rs  lib.rs  progress.rs  result.rs
crates/vectize/src/pipeline/: color.rs  contour.rs  curves.rs  gradient.rs  loader.rs  mod.rs  preprocess.rs  segment.rs  simplify.rs  smooth.rs  svg.rs
crates/vectize/tests/: integration_tests.rs  quality_regression_tests.rs
npm/: postinstall.mjs  preuninstall.mjs
npm/lib/: github.mjs  installer.mjs  platform.mjs
npm/tests/: github.test.mjs  platform.test.mjs
scripts/: verify-release-version.mjs
