[package]
name = "vectize-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen bindings for vectize"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
vectize = { path = "../vectize" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
